fix spacing

--- a/apps/research/src/components/mainGrid/SMainGridA.module.scss
+++ b/apps/research/src/components/mainGrid/SMainGridA.module.scss
@@ -3,6 +3,7 @@
 
 .section {
   // Override any inherited styles
+  padding: 16px 0;
 }
 
 .container {
