--- a/apps/research/src/styles/base/_utilities.scss
+++ b/apps/research/src/styles/base/_utilities.scss
@@ -40,9 +40,9 @@
         margin-top: 96px;
     }
     
-    @include respond(sm) {
-        margin-top: 64px;
-    }
+    // @include respond(sm) {
+    //     margin-top: 80px;
+    // }
 }
 
 
